# MajicMovie

./: .env.example  .gitignore  README.md  auto_ollama.sh  desktop_app.py  majic  majic.sh  pyproject.toml  requirements.txt  setup.sh
app/: config.py  main.py  state.py  supervisor.py
app/agents/: trakt_agent.py
app/auth/: router.py
app/clients/: notify_client.py  poster_lookup_client.py  trakt_client.py  usenet_client.py
app/routers/: backup.py  chat.py  posters.py  recommendations.py  seen.py  settings_router.py  transcribe.py
app/services/: embedding.py  enrichment_service.py  llm_explainer.py  memory_store.py  rag_service.py  usenet_parser.py
app/static/: app.js  manifest.json  styles.css  sw.js
app/templates/: chat.html  index.html  integrations.html
deploy/: com.majicmovie.plist  majicmovie.service
scripts/: ingest_rag.py  start_server.sh
tests/: test_nzbgeek_rss.py  test_recommender.py  test_source_agents.py
