[project]
name = "majic-movie-selector"
version = "0.1.0"
description = "Agentic movie recommendation web app with source aggregation, reasoning, and vector memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1.1.1",
  "numpy>=2.3.2",
  "sentence-transformers>=3.0.0",
  "groq>=0.12.0",
  "rich>=13.0.0",
  "beautifulsoup4>=4.12.0",
  "cryptography>=46.0.0",
  "PyJWT>=2.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
